--- a/index.html
+++ b/index.html
@@ -1,14 +1,88 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="@/client/style.css">
-  </head>
-  <body>
-    <h1>Welcome to Vite + Express!</h1>
-    <ExamplePartial text="This text comes from a partial!" />
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Training App</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Training & Nutrition App</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="#workout.html">Workouts</a></li>
+      <li><a href="#recipes.html">Recipes</a></li>
+      <li><a href="#tracker.html">Calories Tracker</a></li>
+      <li><a href="#personalInfos.html">Personal Infos</a></li>
+      <li><a href="#diary.html">Diary</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <div class="fullscreen-bg"></div>
+
+    <section id="workout">
+      <h2>Today's Workout</h2>
+      <div id="workout-list">
+        <ul>
+          <li>Push-ups - 3 sets of 15 reps</li>
+          <li>Squats - 3 sets of 20 reps</li>
+          <li>Plank - 3 sets of 1 minute</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="recipes">
+      <h2>Healthy Recipes</h2>
+      <div class="recipe" id="recipe1">
+        <h3>Grilled Chicken Salad</h3>
+        <p>Calories: 300 kcal</p>
+        <button onclick="addRecipeCalories(300)">Add Calories</button>
+      </div>
+      <div class="recipe" id="recipe2">
+        <h3>Vegetable Stir-Fry</h3>
+        <p>Calories: 250 kcal</p>
+        <button onclick="addRecipeCalories(250)">Add Calories</button>
+      </div>
+    </section>
+
+    <section id="tracker">
+      <h2>Calories Tracker</h2>
+      <p>Total Calories: <span id="totalCalories">0</span> kcal</p>
+      <p>Daily Goal: <span id="goalCalories">2000</span> kcal</p>
+    </section>
+
+    <section id="personalInfos">
+      <h2>Put in your personal Information</h2>
+      <p>
+        <ul>
+          <li>Name:</li>
+          <li>Age:</li>
+          <li>Weigth:</li>
+        </ul>
+      </p>
+    </section>
+
+    <section id="diary">
+      <h2>Diary for your Fitness</h2>
+      <p>
+        <ul>
+          <li>Monday: ...Calories</li>
+          <li>Tuseday: ...Calories</li>
+          <li>Wednesday: ...Calories</li>
+        </ul>
+      </p>
+    </section>
+  </main>
+
+
+  <footer>
+    <p>&copy; 2025 Training & Nutrition App</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
 </html>
