--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
   <nav>
     <ul>
-      <li><a href="#workout.html">Workouts</a></li>
-      <li><a href="#recipes.html">Recipes</a></li>
-      <li><a href="#tracker.html">Calories Tracker</a></li>
-      <li><a href="#personalInfos.html">Personal Infos</a></li>
-      <li><a href="#diary.html">Diary</a></li>
+      <li><a href="workout.html">Workouts</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a href="tracker.html">Calories Tracker</a></li>
+      <li><a href="personalInfos.html">Personal Infos</a></li>
+      <li><a href="diary.html">Diary</a></li>
     </ul>
   </nav>
 
