--- a/diary.html
+++ b/diary.html
@@ -24,7 +24,21 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Training & Nutrition App</p>
+    <div class="footer-content">
+        <p>&copy; 2025 Dein Unternehmen. Alle Rechte vorbehalten.</p>
+        <nav>
+            <ul>
+                <li><a href="#impressum">Impressum</a></li>
+                <li><a href="#datenschutz">Datenschutz</a></li>
+                <li><a href="#kontakt">Kontakt</a></li>
+            </ul>
+        </nav>
+        <div class="social-media">
+            <a href="https://facebook.com" target="_blank">Facebook</a>
+            <a href="https://twitter.com" target="_blank">Twitter</a>
+            <a href="https://instagram.com" target="_blank">Instagram</a>
+        </div>
+    </div>
   </footer>
 </body>
 </html>
