--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="startbild.jpg" alt="Logo" class="logo">
+    <img src="logo.jpg" alt="Logo" class="logo">
     <h1>Training & Nutrition App</h1>
   </header>
 
