--- a/diary.html
+++ b/diary.html
@@ -8,19 +8,34 @@
 </head>
 <body>
   <header>
-    <h1>Healthy Recipes</h1>
-    <a href="index.html">Back to Home</a>
+    <a href="index.html"><img src="logo.jpg" alt="Logo" class="logo"></a>
+    <h1>Tagebuch</h1>
   </header>
 
   <main>
     <section>
-      <h2>Grilled Chicken Salad</h2>
-      <p>Calories: 300 kcal</p>
+      <h2>Montag:</h2>
+      <p>
+        2200 kcal gegessen<br>
+        500 kcal verbraucht
+      </p>
+    </section>
+
+    <section>
+      <h2>Dienstag:</h2>
+      <p>
+        2000 kcal gegessen<br>
+        0 kcal verbraucht
+      </p>
     </section>
     <section>
-      <h2>Vegetable Stir-Fry</h2>
-      <p>Calories: 250 kcal</p>
+      <h2>Mittwoch:</h2>
+      <p>
+        2600 kcal gegessen<br>
+        300 kcal verbraucht
+      </p>
     </section>
+
   </main>
 
   <footer>
