--- a/personalInformation.html
+++ b/personalInformation.html
@@ -8,23 +8,40 @@
 </head>
 <body>
   <header>
-    <h1>Healthy Recipes</h1>
-    <a href="index.html">Back to Home</a>
+    <a href="index.html"><img src="logo.jpg" alt="Logo" class="logo"></a>
+    <h1>Persönliche Daten</h1>
   </header>
 
   <main>
+
     <section>
-      <h2>Grilled Chicken Salad</h2>
-      <p>Calories: 300 kcal</p>
+      <h2>Steckbrief</h2>
+      <p>
+        Name:<br>
+        Alter:<br>
+        Gewicht:<br> 
+        Größe:<br>
+      </p>
     </section>
-    <section>
-      <h2>Vegetable Stir-Fry</h2>
-      <p>Calories: 250 kcal</p>
-    </section>
+
   </main>
 
   <footer>
-    <p>&copy; 2025 Training & Nutrition App</p>
+    <div class="footer-content">
+        <p>&copy; 2025 Dein Unternehmen. Alle Rechte vorbehalten.</p>
+        <nav>
+            <ul>
+                <li><a href="#impressum">Impressum</a></li>
+                <li><a href="#datenschutz">Datenschutz</a></li>
+                <li><a href="#kontakt">Kontakt</a></li>
+            </ul>
+        </nav>
+        <div class="social-media">
+            <a href="https://facebook.com" target="_blank">Facebook</a>
+            <a href="https://twitter.com" target="_blank">Twitter</a>
+            <a href="https://instagram.com" target="_blank">Instagram</a>
+        </div>
+    </div>
   </footer>
 </body>
 </html>
