--- a/recipes.html
+++ b/recipes.html
@@ -8,18 +8,24 @@
 </head>
 <body>
   <header>
-    <h1>Healthy Recipes</h1>
-    <a href="index.html">Back to Home</a>
+    <a href="index.html"><img src="logo.jpg" alt="Logo" class="logo"></a>
+    <h1>Rezepte</h1>
   </header>
 
   <main>
     <section>
       <h2>Grilled Chicken Salad</h2>
-      <p>Calories: 300 kcal</p>
+      <p>
+        Kalorien: 300 kcal<br>
+        Zutaten: Hänchen, Salat, Tomate, Gurke, Zwiebel, Joghurt-Sauce
+      </p>
     </section>
     <section>
       <h2>Vegetable Stir-Fry</h2>
-      <p>Calories: 250 kcal</p>
+      <p>
+        Kalorien: 250 kcal<br>
+        Zutaten: ...
+      </p>
     </section>
   </main>
 
