--- a/tracker.html
+++ b/tracker.html
@@ -8,18 +8,14 @@
 </head>
 <body>
   <header>
-    <h1>Tracker</h1>
-    <a href="index.html">Back to Home</a>
+    <a href="index.html"><img src="logo.jpg" alt="Logo" class="logo"></a>
+    <h1>Kalorienzähler</h1>
   </header>
 
   <main>
     <section>
-      <h2>Grilled Chicken Salad</h2>
-      <p>Calories: 300 kcal</p>
-    </section>
-    <section>
-      <h2>Vegetable Stir-Fry</h2>
-      <p>Calories: 250 kcal</p>
+      <h2>Deine heutigen Verbrauchten Kaolrien:</h2>
+      <p>Heute hast du bereits: 500 kcal verbraucht.</p>
     </section>
   </main>
 
