--- a/workout.html
+++ b/workout.html
@@ -8,19 +8,44 @@
 </head>
 <body>
   <header>
-    <h1>Healthy Recipes</h1>
-    <a href="index.html">Back to Home</a>
+    <a href="index.html"><img src="logo.jpg" alt="Logo" class="logo"></a>
+    <h1>Workouts</h1>
   </header>
 
   <main>
     <section>
-      <h2>Grilled Chicken Salad</h2>
-      <p>Calories: 300 kcal</p>
+      <h2>Brust Workout:</h2>
+      <p>
+        - Bankdrücken (Lang und Kurzhantel)<br>
+        - Liegestütze<br>
+      </p>
     </section>
+
     <section>
-      <h2>Vegetable Stir-Fry</h2>
-      <p>Calories: 250 kcal</p>
-    </section>
+      <section>
+        <h2>Bauch Workout:</h2>
+        <p>
+          - Sit Ups<br>
+          - Plank<br>
+        </p>
+      </section>
+
+      <section>
+        <h2>Rücken Workout:</h2>
+        <p>
+          - Rudern (Eng oder Breit)<br>
+          - Klimmzüge<br>
+        </p>
+      </section>
+
+      <section>
+        <h2>Bein Workout:</h2>
+        <p>
+          - Beinpresse<br>
+          - Kniebeugen<br>
+        </p>
+      </section>
+
   </main>
 
   <footer>
