added functioonlity to tracker and started with recipes

--- a/recipes.html
+++ b/recipes.html
@@ -15,17 +15,32 @@
   <main>
     <section>
       <h2>Grilled Chicken Salad</h2>
+      <img src="grilled_chicken_salad.jpg" alt="Grilled Chicken Salad" class="recipe-img">
       <p>
         Kalorien: 300 kcal<br>
         Zutaten: Hänchen, Salat, Tomate, Gurke, Zwiebel, Joghurt-Sauce
       </p>
+      <p>Ein leichter, proteinreicher Salat, perfekt für eine gesunde Mahlzeit.</p>
     </section>
+    
     <section>
       <h2>Vegetable Stir-Fry</h2>
+      <img src="vegetable_stir_fry.jpg" alt="Vegetable Stir-Fry" class="recipe-img">
       <p>
         Kalorien: 250 kcal<br>
-        Zutaten: ...
+        Zutaten: Paprika, Brokkoli, Karotten, Sojasauce, Ingwer, Knoblauch
       </p>
+      <p>Ein schnelles, veganes Pfannengericht mit knackigem Gemüse und asiatischen Aromen.</p>
+    </section>
+    
+    <section>
+      <h2>Overnight Oats mit Beeren</h2>
+      <img src="overnight_oats.jpg" alt="Overnight Oats mit Beeren" class="recipe-img">
+      <p>
+        Kalorien: 350 kcal<br>
+        Zutaten: Haferflocken, Milch, Chiasamen, Honig, Erdbeeren, Blaubeeren
+      </p>
+      <p>Ein gesundes Frühstück, das über Nacht vorbereitet wird und voller Ballaststoffe steckt.</p>
     </section>
   </main>
 
