--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="fullscreen-bg"></div>
 
     <div class="container">
-      <div class="textblock">Willkommen bei unserer Fitness-App!<br><br>
+      <div class="textblock"><h1>Willkommen bei unserer Fitness-App!</h1><br><br>
         Schön, dass du dich für ein aktiveres und gesünderes Leben entschieden hast.<br> 
         Unsere App unterstützt dich dabei, deine persönlichen Fitnessziele zu erreichen – egal, ob du Muskeln aufbauen, Gewicht verlieren oder einfach deine Ausdauer verbessern möchtest.<br>
         
@@ -42,6 +42,12 @@
               - Rezepte<br>
               - Kaolrienzähler<br>
               - Tagebuch<br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
       </div>
     </div>
 
