--- a/personalInformation.html
+++ b/personalInformation.html
@@ -45,7 +45,18 @@
     <h1>Persönliche Daten</h1>
   </header>
 
+  <nav>
+    <ul>
+      <li><a href="workout.html">Workouts</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a href="tracker.html">Calories Tracker</a></li>
+      <li><a href="personalInformation.html">Personal Infos</a></li>
+      <li><a href="diary.html">Diary</a></li>
+    </ul>
+  </nav>
+
   <main>
+    <div class="fullscreen-bg"></div>
     <section class="container">
       <h2>Steckbrief</h2>
       <form action="#" method="post">
@@ -64,6 +75,9 @@
         <button type="submit">Absenden</button>
       </form>
     </section>
+    <br>
+    <br>
+    <br>
   </main>
 </body>
 </html>
