--- a/recipes.html
+++ b/recipes.html
@@ -12,7 +12,18 @@
     <h1>Rezepte</h1>
   </header>
 
+  <nav>
+    <ul>
+      <li><a href="workout.html">Workouts</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a href="tracker.html">Calories Tracker</a></li>
+      <li><a href="personalInformation.html">Personal Infos</a></li>
+      <li><a href="diary.html">Diary</a></li>
+    </ul>
+  </nav>
+
   <main>
+    <div class="fullscreen-bg"></div>
     <section>
       <h2>Grilled Chicken Salad</h2>
       <img src="grilled_chicken_salad.jpg" alt="Grilled Chicken Salad" class="recipe-img">
