--- a/tracker.html
+++ b/tracker.html
@@ -12,12 +12,18 @@
     <h1>Kalorienzähler</h1>
   </header>
 
-  <main>
-    <section>
-      <h2>Deine heutigen verbrannten Kalorien:</h2>
-      <p>Heute hast du bereits: <span id="caloriesBurned">500</span> kcal verbrannt.</p>
-    </section>
+  <nav>
+    <ul>
+      <li><a href="workout.html">Workouts</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a href="tracker.html">Calories Tracker</a></li>
+      <li><a href="personalInformation.html">Personal Infos</a></li>
+      <li><a href="diary.html">Diary</a></li>
+    </ul>
+  </nav>
 
+  <main>
+    <div class="fullscreen-bg"></div>
     <section>
       <h2>Kalorienrechner</h2>
       <label>Gewicht (kg): <input type="number" id="weight"></label>
@@ -47,6 +53,14 @@
       <p>Gewicht halten: <span id="maintain"></span> kcal</p>
       <p>Gewichtsabnahme (-15%): <span id="cut"></span> kcal</p>
     </section>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
   </main>
 
   <footer>
