--- a/workout.html
+++ b/workout.html
@@ -10,8 +10,8 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f8fcfa;
-      color: #707070;
+      background-color: #ffffff;
+      color: #ffffff;
     }
 
     header {
@@ -34,7 +34,7 @@
     }
 
     section {
-        background-color: #fff;
+        background-color: #333;
         border-radius: 16px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
         padding: 30px;
@@ -69,7 +69,7 @@
 
     h2 {
         font-size: 1.8rem;
-        color: #333;
+        color: #000000;
     }
 
     p {
@@ -113,6 +113,16 @@
     <h1>Workouts</h1>
   </header>
 
+  <nav>
+    <ul>
+      <li><a href="workout.html">Workouts</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <li><a href="tracker.html">Calories Tracker</a></li>
+      <li><a href="personalInformation.html">Personal Infos</a></li>
+      <li><a href="diary.html">Diary</a></li>
+    </ul>
+  </nav>
+
   <main>
     <section>
       <h2>Brust Workout:</h2>
@@ -154,20 +164,6 @@
         </iframe>
       </div>
       <p>🏃 Rudern (Eng oder Breit)<br>🧗 Klimmzüge</p>
-    </section>
-
-    <section>
-      <h2>Bein Workout:</h2>
-      <div class="video-container">
-        <iframe 
-          src="https://www.youtube.com/watch?v=bcH-qcnpy20"
-          title="Bein Workout"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen>
-        </iframe>
-      </div>
-      <p>🦵 Beinpresse<br>🏋️ Kniebeugen</p>
     </section>
   </main>
 
