--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
       <li><a href="workout.html">Workouts</a></li>
       <li><a href="recipes.html">Recipes</a></li>
-      <li><a href="tracker.html">Calories Tracker</a></li>
+      <li><a href="tracker.html">Calorie Tracker</a></li>
       <li><a href="personalInformation.html">Personal Infos</a></li>
       <li><a href="diary.html">Diary</a></li>
     </ul>
