--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <nav>
     <ul>
       <li><a href="workout.html">Workouts</a></li>
-      <li><a href="recipes.html">Recipes</a></li>
-      <li><a href="tracker.html">Calorie Tracker</a></li>
-      <li><a href="personalInformation.html">Personal Infos</a></li>
-      <li><a href="diary.html">Diary</a></li>
+      <li><a href="recipes.html">Rezepte</a></li>
+      <li><a href="tracker.html">Kalorienzähler</a></li>
+      <li><a href="personalInformation.html">Persönliche Daten</a></li>
+      <li><a href="diary.html">Tagebuch</a></li>
     </ul>
   </nav>
 
