--- a/workout.html
+++ b/workout.html
@@ -18,9 +18,9 @@
       background-color: #32cd75;
       color: #050a08;
       padding: 15px;
-      display: flex;  /* Flexbox aktiviert */
-      align-items: center;  /* Vertikal zentrieren */
-      justify-content: space-between;  /* Sorgt für Abstand zwischen Logo und Überschrift */
+      display: flex; 
+      align-items: center; 
+      justify-content: space-between;  
     }
 
     .logo {
@@ -116,10 +116,10 @@
   <nav>
     <ul>
       <li><a href="workout.html">Workouts</a></li>
-      <li><a href="recipes.html">Recipes</a></li>
-      <li><a href="tracker.html">Calories Tracker</a></li>
-      <li><a href="personalInformation.html">Personal Infos</a></li>
-      <li><a href="diary.html">Diary</a></li>
+      <li><a href="recipes.html">Rezepte</a></li>
+      <li><a href="tracker.html">Kalorienzähler</a></li>
+      <li><a href="personalInformation.html">Persönliche Daten</a></li>
+      <li><a href="diary.html">Tagebuch</a></li>
     </ul>
   </nav>
 
@@ -135,7 +135,7 @@
           allowfullscreen>
         </iframe>
       </div>
-      <p>🏋️ Bankdrücken (Lang- und Kurzhantel)<br>🤸 Liegestütze</p>
+      <p> Bankdrücken (Lang- und Kurzhantel)<br> Liegestütze</p>
     </section>
 
     <section>
@@ -149,7 +149,7 @@
           allowfullscreen>
         </iframe>
       </div>
-      <p>💪 Sit Ups<br>🪵 Plank</p>
+      <p> Sit Ups<br> Plank</p>
     </section>
 
     <section>
@@ -163,7 +163,7 @@
           allowfullscreen>
         </iframe>
       </div>
-      <p>🏃 Rudern (Eng oder Breit)<br>🧗 Klimmzüge</p>
+      <p> Rudern (Eng oder Breit)<br> Klimmzüge</p>
     </section>
   </main>
 
