--- a/recipes.html
+++ b/recipes.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recipes</title>
+  <title>Rezepte</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,52 +24,60 @@
 
   <main>
     <div class="fullscreen-bg"></div>
+
     <section>
       <h2>Grilled Chicken Salad</h2>
-      <img src="grilled_chicken_salad.jpg" alt="Grilled Chicken Salad" class="recipe-img">
-      <p>
-        Kalorien: 300 kcal<br>
-        Zutaten: Hänchen, Salat, Tomate, Gurke, Zwiebel, Joghurt-Sauce
-      </p>
-      <p>Ein leichter, proteinreicher Salat, perfekt für eine gesunde Mahlzeit.</p>
+      <div class="recipe-container">
+        <img src="grilled_chicken_salad.jpg" alt="Grilled Chicken Salad" class="recipe-img">
+        <div class="recipe-text">
+          <p><strong>Kalorien:</strong> 300 kcal</p>
+          <p><strong>Zutaten:</strong> Hänchen, Salat, Tomate, Gurke, Zwiebel, Joghurt-Sauce</p>
+          <p>Ein leichter, proteinreicher Salat, perfekt für eine gesunde Mahlzeit.</p>
+        </div>
+      </div>
     </section>
-    
+
     <section>
       <h2>Vegetable Stir-Fry</h2>
-      <img src="vegetable_stir_fry.jpg" alt="Vegetable Stir-Fry" class="recipe-img">
-      <p>
-        Kalorien: 250 kcal<br>
-        Zutaten: Paprika, Brokkoli, Karotten, Sojasauce, Ingwer, Knoblauch
-      </p>
-      <p>Ein schnelles, veganes Pfannengericht mit knackigem Gemüse und asiatischen Aromen.</p>
+      <div class="recipe-container">
+        <img src="vegetable_stir_fry.jpg" alt="Vegetable Stir-Fry" class="recipe-img">
+        <div class="recipe-text">
+          <p><strong>Kalorien:</strong> 250 kcal</p>
+          <p><strong>Zutaten:</strong> Paprika, Brokkoli, Karotten, Sojasauce, Ingwer, Knoblauch</p>
+          <p>Ein schnelles, veganes Pfannengericht mit knackigem Gemüse und asiatischen Aromen.</p>
+        </div>
+      </div>
     </section>
-    
+
     <section>
       <h2>Overnight Oats mit Beeren</h2>
-      <img src="overnight_oats.jpg" alt="Overnight Oats mit Beeren" class="recipe-img">
-      <p>
-        Kalorien: 350 kcal<br>
-        Zutaten: Haferflocken, Milch, Chiasamen, Honig, Erdbeeren, Blaubeeren
-      </p>
-      <p>Ein gesundes Frühstück, das über Nacht vorbereitet wird und voller Ballaststoffe steckt.</p>
+      <div class="recipe-container">
+        <img src="overnight_oats.jpg" alt="Overnight Oats mit Beeren" class="recipe-img">
+        <div class="recipe-text">
+          <p><strong>Kalorien:</strong> 350 kcal</p>
+          <p><strong>Zutaten:</strong> Haferflocken, Milch, Chiasamen, Honig, Erdbeeren, Blaubeeren</p>
+          <p>Ein gesundes Frühstück, das über Nacht vorbereitet wird und voller Ballaststoffe steckt.</p>
+        </div>
+      </div>
     </section>
+
   </main>
 
   <footer>
     <div class="footer-content">
-        <p>&copy; 2025 Dein Unternehmen. Alle Rechte vorbehalten.</p>
-        <nav>
-            <ul>
-                <li><a href="#impressum">Impressum</a></li>
-                <li><a href="#datenschutz">Datenschutz</a></li>
-                <li><a href="#kontakt">Kontakt</a></li>
-            </ul>
-        </nav>
-        <div class="social-media">
-            <a href="https://facebook.com" target="_blank">Facebook</a>
-            <a href="https://twitter.com" target="_blank">Twitter</a>
-            <a href="https://instagram.com" target="_blank">Instagram</a>
-        </div>
+      <p>&copy; 2025 Dein Unternehmen. Alle Rechte vorbehalten.</p>
+      <nav>
+        <ul>
+          <li><a href="#impressum">Impressum</a></li>
+          <li><a href="#datenschutz">Datenschutz</a></li>
+          <li><a href="#kontakt">Kontakt</a></li>
+        </ul>
+      </nav>
+      <div class="social-media">
+        <a href="https://facebook.com" target="_blank">Facebook</a>
+        <a href="https://twitter.com" target="_blank">Twitter</a>
+        <a href="https://instagram.com" target="_blank">Instagram</a>
+      </div>
     </div>
   </footer>
 </body>
