--- a/recipes.html
+++ b/recipes.html
@@ -55,7 +55,7 @@
         <img src="overnight_oats.jpg" alt="Overnight Oats mit Beeren" class="recipe-img">
         <div class="recipe-text">
           <p><strong>Kalorien:</strong> 350 kcal</p>
-          <p><strong>Zutaten:</strong> Haferflocken, Milch, Chiasamen, Honig, Erdbeeren, Erdbeeren</p>
+          <p><strong>Zutaten:</strong> Haferflocken, Milch, Chiasamen, Honig, Erdbeeren</p>
           <p>Ein gesundes Frühstück, das über Nacht vorbereitet wird und voller Ballaststoffe steckt.</p>
         </div>
       </div>
