--- a/recipes.html
+++ b/recipes.html
@@ -43,7 +43,7 @@
         <img src="vegetable_stir_fry.jpg" alt="Vegetable Stir-Fry" class="recipe-img">
         <div class="recipe-text">
           <p><strong>Kalorien:</strong> 250 kcal</p>
-          <p><strong>Zutaten:</strong> Paprika, Brokkoli, Karotten, Sojasauce, Ingwer, Knoblauch</p>
+          <p><strong>Zutaten:</strong> Paprika, Brokkoli, Karotten, Sojasauce, Ingwer, Knoblauch, Wasser</p>
           <p>Ein schnelles, veganes Pfannengericht mit knackigem Gemüse und asiatischen Aromen.</p>
         </div>
       </div>
