--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         3.    Unser Angebot:<br><br>
               - Workouts<br>
               - Rezepte<br>
-              - Kaolrienzähler<br>
+              - Kalorienzähler<br>
               - Tagebuch<br>
               <br>
               <br>
