--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Training App</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .container {
+        color: white;
+    }
+</style>
 </head>
 <body>
   <header>
