Git aufräumen und Name geändert

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <img src="logo.jpg" alt="Logo" class="logo">
-    <h1>Training & Nutrition App</h1>
+    <h1>StrongTrack</h1>
   </header>
 
   <nav>
@@ -31,7 +31,7 @@
     <div class="fullscreen-bg"></div>
 
     <div class="container">
-      <div class="textblock"><h1>Willkommen bei unserer Fitness-App!</h1><br><br>
+      <div class="textblock"><h1>Willkommen bei StrongTrack!</h1><br><br>
         Schön, dass du dich für ein aktiveres und gesünderes Leben entschieden hast.<br> 
         Unsere App unterstützt dich dabei, deine persönlichen Fitnessziele zu erreichen – egal, ob du Muskeln aufbauen, Gewicht verlieren oder einfach deine Ausdauer verbessern möchtest.<br>
         
